--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,5 @@
 .alpackages/
 #Snapshots folder
 .snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+new 
+new test
